# linux-deepagent

./: .env  LICENSE  README.md  pyproject.toml
Agent/: Agent_Bot.py  Agent_Bot_MCP.py  Apache_Bot.py
Agent/tools/: check_apache_config.py  firewall.py  memory.py  network.py  process.py  systemd.py  systemd_mcp.py
Agent/utils/: Input.py
