[project]
name = "linux-deepagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.11",
    "dotenv>=0.9.9",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
]
